# xfce4-applet-network

./: .clang-format  .gitignore  AUTHORS  Makefile.am  NEWS  README  configure.ac.in
icons/: Makefile.am
icons/scalable/: Makefile.am  README
panel-plugin/: Array.h  Binary.cc  Binary.h  BinaryPrefix.cc  BinaryPrefix.h  CSS.cc  CSS.h  CSSBuilder.cc  CSSBuilder.h  Color.h  Config.cc  Config.h  ConfigUI.cc  ConfigUI.h  Constants.cc  Constants.h  Debug.h  Defaults.cc  Defaults.h  Device.cc  Device.h  DeviceConfig.cc  DeviceConfig.h  DeviceConfigDialog.cc  DeviceConfigDialog.h  DeviceOptions.cc  DeviceOptions.h  DeviceStats.cc  DeviceStats.h  DeviceTooltip.cc  DeviceTooltip.h  DeviceUI.cc  DeviceUI.h  DeviceWidget.cc  DeviceWidget.h  Devices.h  Dial.cc  Dial.h  DialOptions.h  Dict2.h  (+104 more)
panel-plugin/sys/bsd/: DiskStatsReader.h  NetworkStatsReader.h  System.h  UniqueID.h
panel-plugin/sys/common/: PathImpl.h  PathPrivate.cc  PathPrivate.h  StatsReader.cc  StatsReader.h  StatsReaderBase.cc  StatsReaderBase.h
panel-plugin/sys/linux/: DiskStatsReader.cc  DiskStatsReader.h  NetworkStatsImpl.cc  NetworkStatsImpl.h  NetworkStatsReader.cc  NetworkStatsReader.h  Path.cc  Path.h  StatsImpl.cc  StatsImpl.h  System.cc  System.h  UniqueID.cc  UniqueID.h
panel-plugin/sys/osx/: System.h
panel-plugin/sys/windows/: System.h
