iconsdir = $(datadir)/icons/hicolor/scalable/apps

icons_DATA = \
    xfce-applet-network-cellular-connected.svg \
    xfce-applet-network-cellular-disconnected.svg \
    xfce-applet-network-other-connected.svg \
    xfce-applet-network-other-disconnected.svg \
    xfce-applet-network-ppp-connected.svg \
    xfce-applet-network-ppp-disconnected.svg \
    xfce-applet-network-usb-connected.svg \
    xfce-applet-network-usb-disconnected.svg \
    xfce-applet-network-virtual-connected.svg \
    xfce-applet-network-virtual-disconnected.svg \
    xfce-applet-network-wired-connected.svg \
    xfce-applet-network-wired-disconnected.svg \
    xfce-applet-network-wireless-connected.svg \
    xfce-applet-network-wireless-disconnected.svg

EXTRA_DIST = $(icons_DATA)
