iconsdir = $(datadir)/icons/hicolor/scalable/apps

icons_DATA = \
    xfce-applet-speed-cellular.svg \
    xfce-applet-speed-other.svg \
    xfce-applet-speed-ppp.svg \
    xfce-applet-speed-usb.svg \
    xfce-applet-speed-virtual.svg \
    xfce-applet-speed-wired.svg \
    xfce-applet-speed-wireless.svg

EXTRA_DIST = $(icons_DATA)
